--- a/Home.html
+++ b/Home.html
@@ -10,8 +10,18 @@
 </head>
 		<body>
 			<header>
+
+                <div class="header">
+                    <a href="#default" class="logo">SZ Computing</a>
+                    <div class="header-right">
+                      <a class="active" href="#home">Home</a>
+                      <a href="#report">Formal Report Form</a>
+                      <a href="#coc">Chain of Custody Form</a>
+                    </div>
+                  </div>
+
 			</header>
-            
+
 		</body>
 
 </html>
