--- a/Forms.html
+++ b/Forms.html
@@ -1,1 +1,28 @@
 
+<!DOCTYPE html>
+<html>
+	
+<head>
+<meta charset="utf-8"/>
+<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="ForensicsSiteCSS.css">
+<title>Forms</title>	
+</head>
+		<body>
+			<header>
+
+                <div class="header">
+                    <a href="#default" class="logo">SZ Computing</a>
+                    <div class="header-right">
+                      <a href="#home">Home</a>
+                      <a class= "active" href="#report">Formal Report Form</a>
+                      <a href="#coc">Chain of Custody Form</a>
+                    </div>
+                  </div>
+
+			</header>
+
+		</body>
+
+</html>
