--- a/Home.html
+++ b/Home.html
@@ -12,13 +12,27 @@
 			<header>
 
                 <div class="header">
-                    <a href="#default" class="logo">SZ Computing</a>
-                    <div class="header-right">
-                      <a class="active" href="#home">Home</a>
-                      <a href="#report">Formal Report Form</a>
-                      <a href="#coc">Chain of Custody Form</a>
+                    <a href="Home.html">Home</a>
+                    <a href="Forms.html">Formal Report Form</a>
+                    <a href="COC.html">Chain of Custody Form</a>
+                    <a href="EvidenceTables.html">Laptop Evidence Tables</a>
+                </div>
+                <div class = "backgroundImage">
+                    <div class = "backgroundTextColor">
+                        <div class = "backgroundText">
+                            <br><br>
+                            Welcome to 
+                            <br>
+                            SZ Computing
+                            <br><br>
+                        </div>
                     </div>
-                  </div>
+                </div>
+                <div class = "CreativityCode">
+                    Efficiency in Digital Forensics
+                    <p>——————————</p>
+                    <p>Don't worry about creating a full report from scratch. Save time and create one on SZ Computing!</p>
+                </div>
 
 			</header>
 
