--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
                     <a href="Home.html">Home</a>
                     <a href="Forms.html">Formal Report Form</a>
                     <a href="COC.html">Chain of Custody Form</a>
-                    <a href="EvidenceTables.html">Laptop Evidence Tables</a>
+                    <a href="EvidenceTables.html">Evidence Tables</a>
                 </div>
                 <div class = "backgroundImage">
                     <div class = "backgroundTextColor">
