--- a/EvidenceTables.html
+++ b/EvidenceTables.html
@@ -109,15 +109,17 @@
                      <option value="16GB">16GB</option>
                      <option value="32GB">32GB</option>
                      <option value="64GB">64GB</option>
-                     <option value="128GB">128GB</option>  
+                     <option value="128GB">128GB</option>
+                     <option value="256GB">256GB</option>
+                     <option value="512GB">512GB</option>  
+                     <option value="1TB">1TB</option>
+                     
             <tr>
              <td>Location of Acquisition</td>
              <td contenteditable='true'></td><td contenteditable='true'></td>
              </tr> 
            </tbody>
-             </table>
-               <br><br>
-             <input type="button" value="Add" onclick="addRow()" />    
+             </table>   
          </fieldset>
 
        </form>
