--- a/EvidenceTables.html
+++ b/EvidenceTables.html
@@ -90,15 +90,15 @@
                     <option value="iPhone 7 Plus">iPhone 7 Plus</option>
                     <option value="iPhone SE (1st Generation)">iPhone SE (1st Generation)</option>
 
-            </td><td contenteditable='true'></td>
+            </td>
             </tr>
            <tr>        
              <td>Model Number</td>
-             <td contenteditable='true'></td><td contenteditable='true'></td>
+             <td contenteditable='true'></td>
              </tr>
            <tr>
              <td>Serial Number</td>
-             <td contenteditable='true'></td><td contenteditable='true'></td>
+             <td contenteditable='true'></td>
              </tr>
             <tr>
              <td>Capacity</td>
@@ -114,7 +114,36 @@
                      <option value="512GB">512GB</option>  
                      <option value="1TB">1TB</option>
                      
+                    </tr>
             <tr>
+             <td>Color</td>
+             <td>
+                <form action="/action_page.php">
+                    <label for="Color">Choose Color:</label>
+                    <select name="Color" id="Color">
+                     <option value="Space Gray">Space Gray</option>
+                     <option value="Silver">Silver</option>
+                     <option value="Gold">Gold</option>
+                     <option value="Rose Gold">Rose Gold</option>
+                     <option value="Black">Black</option>
+                     <option value="Jet Black">Jet Black</option>  
+                     <option value="Red">Red</option>
+                     <option value="White">White</option>
+                     <option value="Blue">Blue</option>
+                     <option value="Yellow">Yellow</option>
+                     <option value="Coral">Coral</option>
+                     <option value="Purple">Purple</option>
+                     <option value="Green">Green</option>
+                     <option value="Midnight Green">Midnight Green</option>
+                     <option value="Graphite">Graphite</option>
+                     <option value="Pacific Blue">Pacific Blue</option>
+                     <option value="Starlight">Starlight</option>
+                     <option value="Midnight">Midnight</option>
+                     <option value="Pink">Pink</option>
+                     <option value="Sierra Blue">Sierra Blue</option>
+                     <option value="Alpine Green">Alpine Green</option>
+
+            <tr>   
              <td>Location of Acquisition</td>
              <td contenteditable='true'></td><td contenteditable='true'></td>
              </tr> 
