--- a/EvidenceTables.html
+++ b/EvidenceTables.html
@@ -28,15 +28,15 @@
                     </div>
                 </div>
                 <div class = "CreativityCode">
-                    Begin filling out the form template below!
+                    Begin filling out the evidence table below!
                 </div>
 
 			</header>
 
             <div>
-                <p class = "intro">Welcome to SZ Computing! Here, you can fill out evidence tables for <b>Lenovo</b> laptops for official use 
+                <p class = "intro">Welcome to SZ Computing! Here, you can fill out evidence tables for <b>Apple iPhones</b> for official use 
                     with the provided template. Once you've completed the template, simply click the download button to save the table. See below
-                    for a history of your tables from this session!
+                    for corresponding iPhone and Model Numbers!
                 </p>
             </div>
 
