--- a/EvidenceTables.html
+++ b/EvidenceTables.html
@@ -43,6 +43,112 @@
         </fieldset>
         <br><br>
 
+        <fieldset>
+          <legend>MODEL NUMBER KEY</legend>
+          <br><br>
+          
+          <table id="mytable" style="width:100%">
+            <thead>
+              <tr>
+                <th style='width:30%'>Phone Model</h1>
+                <th style="width:70%">Model Numbers</h1>
+              </tr>
+            
+          </thead>
+          <tbody>
+            <tr>
+              <td>iPhone SE (1st Generation)</td>
+              <td>A1723, A1662, A1724</td>
+              </tr>
+            <tr>
+              <td>iPhone 7 Plus</td>
+              <td>A1661, A1784, A1785 (Japan)</td>
+              </tr>
+            <tr>
+              <td>iPhone 7</td>
+              <td>A1660, A1778, A1779 (Japan)</td>
+              </tr>
+            <tr>
+              <td>iPhone 8 Plus</td>
+              <td>A1864, A1897, A1898 (Japan)</td>
+              </tr>
+            <tr>
+              <td>iPhone 8</td>
+              <td>A1863, A1905, A1906 (Japan)</td>
+              </tr>
+            <tr>
+              <td>iPhone X</td>
+              <td>A1865, A1901, A1902 (Japan)</td>
+              </tr>
+            <tr>
+              <td>iPhone XR</td>
+              <td>A1984, A2105, A2106 (Japan), A2107, A2108 (China mainland)</td>
+              </tr>
+            <tr>
+              <td>iPhone XS Max</td>
+              <td>A1921, A2101, A2102 (Japan), A2103, A2104 (China mainland)</td>
+              </tr>
+            <tr>
+              <td>iPhone XS</td>
+              <td>A1920, A2097, A2098 (Japan), A2099, A2100 (China mainland)</td>
+              </tr>
+            <tr>
+              <td>iPhone 11</td>
+              <td>A2111 (Canada, United States), A2223 (China mainland, Hong Kong, Macao), A2221 (other countries and regions)</td>
+              </tr>
+            <tr>
+              <td>iPhone 11 Pro Max</td>
+              <td>A2161 (Canada, United States), A2220 (China mainland, Hong Kong, Macao), A2218 (other countries and regions)</td>
+              </tr> 
+            <tr>
+              <td>iPhone 11 Pro</td>
+              <td>A2160 (Canada, United States), A2217 (China mainland, Hong Kong, Macao), A2215 (other countries and regions)</td>
+              </tr> 
+            <tr>
+              <td>iPhone SE (2nd Generation)</td>
+              <td>A2275 (Canada, United States), A2298 (China mainland), A2296 (other countries and regions)</td>
+              </tr>
+            <tr>
+              <td>iPhone 12 Mini</td>
+              <td>A2176 (United States), A2398 (Canada, Japan), A2400 (China mainland), A2399 (other countries and regions)</td>
+              </tr>
+            <tr>
+              <td>iPhone 12</td>
+              <td>A2172 (United States), A2402 (Canada, Japan), A2404 (China Mainland, Hong Kong, Macao), A2403 (other countries and regions)</td>
+              </tr> 
+            <tr>
+              <td>iPhone 12 Pro</td>
+              <td>A2341 (United States), A2406 (Canada, Japan), A2408 (China mainland, Hong Kong, Macao), A2407 (other countries and regions)</td>
+              </tr> 
+            <tr>
+              <td>iPhone 12 Pro Max</td>
+              <td>A2342 (United States), A2410 (Canada, Japan), A2412 (China mainland, Hong Kong, Macao), A2411 (other countries and regions)</td>
+              </tr>
+            <tr>
+              <td>iPhone 13 Mini</td>
+              <td>A2481 (United States), A2626 (Canada, Japan, Mexico, Saudi Arabia), A2629 (mainland China), A2630 (Armenia, Belarus, Armenia, Belarus, Kazakhstan, Kyrgyzstan, Russia), A2628 (other countries and regions)</td>
+              </tr>
+            <tr>
+              <td>iPhone 13</td>
+              <td>A2482 (United States), A2631 (Canada, Japan, Mexico, Saudi Arabia), A2634 (mainland China, Hong Kong, Macao), A2635 (Armenia, Belarus, Kazakhstan, Kyrgyzstan, Russia), A2633 (other countires and regions)</td>
+              </tr>
+            <tr>
+              <td>iPhone 13 Pro</td>
+              <td>A2483 (United States), A2636 (Canada, Japan, Mexico, Saudi Arabia), A2639 (mainland China, Hong Kong, Macao), A2640 (Armenia, Belarus, Kazakhstan, Kyrgyzstan, Russia), A2638 (other countries and regions)</td>
+              </tr>
+            <tr>
+              <td>iPhone 13 Pro Max</td>
+              <td>A2484 (United States), A2641 (Canada, Japan, Mexico, Saudi Arabia), A2644 (mainland China, Hong Kong, Macao), A2645 (Armenia, Belarus, Kazakhstan, Kyrgyzstan, Russia), A2643 (other countries and regions)</td>
+              </tr>
+            <tr>
+              <td>iPhone SE (3rd Generation)</td>
+              <td>A2595 (United States, Canada, Puerto Rico, U.S. Virgin Islands, Guam, Mexico, Saudi Arabia), A2782 (Japan), A2784 (Russia, Armenia, Belarus, Kazakhstan, Kyrgyzstan), A2785 (China), A2783 (other countries and regions)</td>
+              </tr>                                  
+
+            </tbody>
+          </table>   
+      </fieldset>
+
 
          <fieldset>
              <legend>EVIDENCE TABLE</legend>
