--- a/COC.html
+++ b/COC.html
@@ -47,4 +47,64 @@
                     <fieldset class = "fieldsets">
                     <label for="agencyName">Your Agency Name:</label>
                     <input type="text" id="agencyName" name="agencyName">
-                        <br><br> 
+                        <br><br>
+                    <label for="caseNum">Case Number:</label>
+                    <input type="text" id="caseNum" name="caseNum" size = "40"><br><br>
+                    </fieldset>
+                    <br><br>
+                    <fieldset class = "fieldsets">
+                        <legend>FORM</legend>
+                        <table id="mytable" style='width:100%'>
+                            <thead>
+                              <tr>
+                              <th style='width:15%'>Item #</h1>
+                              <th style='width:20%'>Date/Time Removed</h1>
+                              <th style='width:50%'>Reason For Removal of Evidence</h1>
+                              <th style='width:15%'>Signature</h1>
+                             </tr>
+                             <tbody>
+                                <tr>
+                                  <td>1</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>2</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>3</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>4</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>5</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>6</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>7</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>8</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>9</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                                <tr>
+                                  <td>10</td>
+                                  <td contenteditable="true"></td><td contenteditable="true"></td><td contenteditable="true"></td>
+                                  </tr>
+                             </tbody>
+                            </table>
+                    </fieldset>
+                                                
+                          </thead>
