--- a/Home.html
+++ b/Home.html
@@ -31,8 +31,8 @@
                 <div class = "CreativityCode">
                     Efficiency in Digital Forensics
                     <p>——————————</p>
-                    <p>Don't worry about creating a full report from scratch. Save time and create one on SZ Computing!</p>
-                </div>
+                    <p class = "intro">Don't worry about creating a full report from scratch. Save time and create one on SZ Computing!</p>
+                                    </div>
 
 			</header>
 
