altered header text(s)

--- a/COC.html
+++ b/COC.html
@@ -31,7 +31,7 @@
                     Begin filling out the form template below!
 
             <div>
-                <p class = "intro">Welcome to SZ Computing! Here, you can complete a <b>Chain of Custody</b> Form for official use 
+                <p class = "intro">Welcome! Here, you can complete a <b>Chain of Custody</b> Form for official use 
                     with the provided template. Once you've completed the template, simply click the download button to save the form.
                 </p>
             </div>
