--- a/EvidenceTables.html
+++ b/EvidenceTables.html
@@ -31,7 +31,7 @@
                     Begin filling out the evidence table below!
 
                     <div>
-                        <p class = "intro">Welcome to SZ Computing! Here, you can fill out evidence tables for <b>Apple iPhones</b> for official use 
+                        <p class = "intro">Welcome! Here, you can fill out evidence tables for <b>Apple iPhones</b> for official use 
                             with the provided template. Once you've completed the template, simply click the download button to save the table. See below
                             for corresponding iPhone and Model Numbers!
                         </p>
