--- a/Forms.html
+++ b/Forms.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class = "CreativityCode">
                     Begin filling out the form template below!
-                    <p class = "intro">Welcome to SZ Computing! Here, you can complete a full, formal digital forensics report for official use 
+                    <p class = "intro">Welcome! Here, you can complete a full, formal digital forensics report for official use 
                         with the provided template. Once you've completed the template, simply click the download button to save the report.
                     </p>
                 </div>
