--- a/Home.html
+++ b/Home.html
@@ -21,9 +21,7 @@
                     <div class = "backgroundTextColor">
                         <div class = "backgroundText">
                             <br><br>
-                            Welcome to 
-                            <br>
-                            SZ Computing
+                            Welcome 
                             <br><br>
                         </div>
                     </div>
@@ -31,7 +29,7 @@
                 <div class = "CreativityCode">
                     Efficiency in Digital Forensics
                     <p>——————————</p>
-                    <p class = "intro">Don't worry about creating a full report from scratch. Save time and create one on SZ Computing!</p>
+                    <p class = "intro">Don't worry about creating a full report from scratch. Save time and create one on our site!</p>
                                     </div>
 
 			</header>
