--- a/COC.html
+++ b/COC.html
@@ -104,7 +104,19 @@
                                   </tr>
                              </tbody>
                             </table>
+                            <br><br>
+                            <input class = "AddB" type="button" value="Add" onclick="addRow()" />    
+
                     </fieldset>
+
+                    <script>
+                      function addRow(){
+                          var str ="<tr><td contenteditable='true'></td><td contenteditable='true'></td><td contenteditable='true'></td></tr>";
+                          
+                          $('#mytable tbody').append(str);
+                      }
+                      </script>
+                      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
                                                 
                           </thead>
                           </fieldset>
