--- a/COC.html
+++ b/COC.html
@@ -111,7 +111,7 @@
 
                     <script>
                       function addRow(){
-                          var str ="<tr><td contenteditable='true'></td><td contenteditable='true'></td><td contenteditable='true'></td></tr>";
+                          var str ="<tr><td contenteditable='true'></td><td contenteditable='true'></td><td contenteditable='true'></td contenteditable='true'></td><td></tr>";
                           
                           $('#mytable tbody').append(str);
                       }
